react-infinite-scroll-component

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gh-pages": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-infinite-scroll-component": "^2.4.0",
     "react-lines-ellipsis": "^0.7.3",
     "react-scripts": "1.0.14"
   },
