--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-infinite-scroll-component": "^2.4.0",
+    "react-infinite-scroller": "^1.0.15",
     "react-lines-ellipsis": "^0.7.3",
     "react-scripts": "1.0.14"
   },
