--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-infinite-scroll-component": "^2.4.0",
     "react-infinite-scroller": "^1.0.15",
     "react-lines-ellipsis": "^0.7.3",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14"
   },
   "scripts": {
