--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.6.2",
     "gh-pages": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-lines-ellipsis": "^0.7.3",
     "react-infinite-scroll-component": "^2.4.0",
     "react-infinite-scroller": "^1.0.15",
+    "react-lines-ellipsis": "^0.7.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14"
   },
