--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "firebase": "^4.6.2",
     "gh-pages": "^1.0.0",
     "react": "^16.0.0",
